Adding in short exact, infrastructure for long exact.

--- a/app/views/modals/headlines/_achievements.haml
+++ b/app/views/modals/headlines/_achievements.haml
@@ -26,4 +26,4 @@
       %button.button.button-info.button-large{ onclick: sharing_popup_javascript(:twitter, challenge_url(@path.permalink), sharing_text) } Share on Twitter
   
   .exit{ style: "float: right; margin-top: 24px;" }
-    %a{ onclick: "$.next_headline($(this).parents('.headlines'));" } Continue to Launchpad »
+    %a{ onclick: "$.MB.next_headline($(this).parents('.headlines'));" } Continue to Launchpad »
