--- a/app/views/modals/headlines/_welcome.html.haml
+++ b/app/views/modals/headlines/_welcome.html.haml
@@ -1,17 +1,8 @@
 :javascript
-  function checkSubmit(e, input){
-    if(e && e.keyCode == 13){ $(input).parents('form').submit(); }
-  }
-  
-  function submit_or_close(exit_button){
-    if($("#user_email").val() == ""){
-      $.next_headline($(exit_button).parents('.headlines'));
-    } else {
-      $('#update_name').submit();
-    }
-  }
-
   $(function(){
+    $(".continue_to_launchpad").click(function(){
+      $.MB.submit_or_close(this);
+    })
     $("#update_name").on("ajax:success", function(e, result){
       if(result.status == "error"){
         $(this).find("p.error").remove();
@@ -20,7 +11,7 @@
       } else {
         $("nav.navbar .users_name").text($(this).find("#user_name").val());
         $(this).find("#user_email").removeClass("error").addClass("successful");
-        $.next_headline($(this).parents('.headlines'));
+        $.MB.next_headline($(this).parents('.headlines'));
       }
     });
   })
@@ -46,4 +37,4 @@
         = form_for(current_user, remote: true, html: { id: "update_name" }) do |f|
           = f.text_field :email, value: nil, placeholder: "Or sign up with email..."   
   .exit{ style: "float: right; margin-top: 24px;" }
-    %a{ onclick: "submit_or_close(this);" } Continue to Launchpad »
+    %a.continue_to_launchpad Continue to Launchpad »
