--- a/app/views/modals/_explore.html.haml
+++ b/app/views/modals/_explore.html.haml
@@ -1,6 +1,6 @@
 %div#explore_modal.dropdown_modal.modal.hide.fade{ tabindex: "-1" }
   %div.explorecontainer
-    - @persona = current_user.user_personas.first.persona
+    - @persona = current_user.user_personas.includes(:persona).sort{ |a, b| b.level <=> a.level }.first.persona
     - @paths = @persona.paths.order("public_at DESC")
     = render "personas/show"
       
