--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -582,6 +582,8 @@ h3 { font-size: 28px; }
     h4 { font-size: 17px; margin-bottom: 4px;  }
     ul { margin-bottom: 20px; }
     p { margin-bottom: 20px; }
+    label { display: inline-block;}
+    select {width: 170px; }
   }
   .signup{
     margin: 10px 0px 8px 0; 
@@ -596,3 +598,18 @@ h3 { font-size: 28px; }
   }
 }
 
+.professional_mb_form{
+  .body{
+    padding: 0 27px;
+    font-size: 14px;
+    
+    input, label, select {margin-left: 10px; }
+    input { margin-right: 6px; }
+    label { }
+    select {width: 170px; }
+    h4 {margin-bottom:10px; margin-top: 20px; }
+    div {display: inline-block; margin-right: 70px; }
+    
+    .checkbox { padding-left: 0; }
+  }
+}
