--- a/app/views/sections/continue.html.haml
+++ b/app/views/sections/continue.html.haml
@@ -22,7 +22,7 @@
     %div.quizheader
       = image_tag @path.path_pic, style: "width: 50px; height: 50px;", alt: "#{@path.name}"
       %div{ style: "display:inline-block;" }
-        %span.name <strong>#{@path.name}</strong></span>
+        %span.name <strong>#{@path.name}:</strong> #{@section.name}</span>
       - if current_user
         %div.quiz_progress
           Question #{@question_count} / #{@session_total}
