--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -602,15 +602,15 @@ h3 { font-size: 28px; }
 
 .professional_mb_form{
   .body{
-    padding: 0 27px;
+    padding: 0 0 0 27px;
     font-size: 14px;
     
     input, label, select {margin-left: 10px; }
     input { margin-right: 6px; }
     label { }
-    select {width: 170px; }
+    select {width: 200px; }
     h4 {margin-bottom:10px; margin-top: 20px; }
-    div {display: inline-block; margin-right: 70px; }
+    div {display: inline-block; margin-right: 50px; }
     
     .checkbox { padding-left: 0; }
   }
