--- a/app/views/sections/register1.html.haml
+++ b/app/views/sections/register1.html.haml
@@ -1,6 +1,6 @@
 :css
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
-  .quizcontainer { width: 650px; margin-top: 50px;}
+  .quizcontainer { width: 600px; margin-top: 50px;}
 %div.quizcontainer
   %div.quizspace
     %div
@@ -23,16 +23,15 @@
               = f.check_box :wants_internship
             %h4
               What's your location?
-            %div
+            %div{ style: "display: block; "}
               %label Country
               = f.country_select :country, priority: %w(US GB CA IN DE KE NL FR), prompt: 'Please select a country'
             %div
               %label State/Province
               = render "subregion_select"
-            %div
+            %div{ style: "margin-right: 0;"}
               %label City
-              = f.text_field :city, class: "input-medium", placeholder:"City"
-            %p Okay, so, now you register, yeah?
-          %div{ style: "margin: 12px 0 0 0; padding: 0 3px;"}
-            = link_to "Continue to Register", finish_section_path(@section, @session_id, s:2), class: "button button-actionable", style: "float: right;"
-            = link_to "Back", finish_section_path(@section, @session_id, s:0), class: "button button-standard", style: "float: right; margin-right: 15px;"
+              = f.text_field :city, style: "width: 187px;", placeholder:"Please enter your city"
+        %div{ style: "margin: -8px 0 0 0; padding: 0 3px; "}
+          = link_to "Continue to Register", finish_section_path(@section, @session_id, s:2), class: "button button-actionable", style: "float: right;"
+          = link_to "Back", finish_section_path(@section, @session_id, s:0), class: "button button-standard", style: "float: left; "
