edits to register2 to sync styles

--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -23,4 +23,4 @@
           = f.password_field :password, value: nil, placeholder: "Password"
       %div{ style: "margin: 12px 0 0 0; padding: 0 3px;"}
         = link_to "Submit", "#", class: "button button-actionable", style: "float: right;"
-        = link_to "Back", finish_section_path(@section, @session_id, s: 1), class: "button button-standard", style: "float: right; margin-right: 15px;"         
+        = link_to "Back", finish_section_path(@section, @session_id, s: 1), class: "button button-standard", style: "float: left;"
