--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -42,17 +42,32 @@
         .right_scroll{ onclick: "slide('right');" }
           = image_tag ICON_CAROUSEL_RIGHT, alt: "Right"
   
-  %div.row
-    %div.span5
-      - if @similar_paths
-        %div.leftbox
-          %div.box_header Similar Challenges
-          %div.leftboxfooter{style:"background-color:white;"}
-            %li.leftrailcontent
-              - @similar_paths.limit(8).each do |p|
-                = link_to challenge_path(p.permalink) do
-                  = image_tag p.picture, class: "leftrailicon", title: "#{p.name}", alt: "#{p.name}"
-      %div.leftbox.newsfeed{ style: "min-height: 361px;" }
+  .row
+    .span5
+      .leftbox
+        .box_header  You may know
+        .leftboxfooter{style:"background-color:white; padding-top: 10px; "}
+          %ul.invite_tiles
+            %li
+              %img{ src: "http://www.placekitten.com/80/80" }
+              %div
+                %h5 Nathaniel Sokoll-Ward
+                %span San Francisco
+                %a.button.button-info Invite
+            %li.invite_tile
+              %img{ src: "http://www.placekitten.com/90/80" }
+              %div
+                %h5 Jonathan Kirst
+                %span Tokyo
+                %a.button.button-info Invite
+            %li.invite_tile
+              %img{ src: "http://www.placekitten.com/60/80" }
+              %div
+                %h5 Becca Lee
+                %span New York City
+                %a.button.button-info Invite
+            
+      .leftbox.newsfeed{ style: "min-height: 361px;" }
         %div#leaderboard_pop.box_header{style: "padding: 10px 12px; "} Leaderboard
         %ul#ranks{ style: "padding: 0px;"}
           - current_user_in_top = false
@@ -99,6 +114,14 @@
                   = link_to truncate(next_user.name, length: 22), profile_path(next_user.username), class: "name"
                   %span.level lvl. #{Enrollment.points_to_level(next_user.total_points.to_i)}
                   %span.points= next_user.total_points
+      - if @similar_paths
+        .leftbox
+          .box_header Similar Challenges
+          .leftboxfooter{style:"background-color:white;"}
+            %li.leftrailcontent
+              - @similar_paths.limit(8).each do |p|
+                = link_to challenge_path(p.permalink) do
+                  = image_tag p.picture, class: "leftrailicon", title: "#{p.name}", alt: "#{p.name}"
     %div.span11
       %div.newsfeed
         %div.box_header
