--- a/app/views/sections/_subregion_select.html.haml
+++ b/app/views/sections/_subregion_select.html.haml
@@ -1,8 +1,12 @@
-- parent_region ||= params[:parent_region]
+- user = current_user
+- parent_region = params[:parent_region] || user.country
 - country = Carmen::Country.coded(parent_region)
 - if country.nil?
   = select_tag "user[state]", "<option>Please select a country</option>"
 - elsif country.subregions?
-  = subregion_select(:current_user, :state, parent_region)
+  - if form
+    = form.subregion_select :state, parent_region
+  - else
+    = subregion_select(:user, :state, parent_region)
 - else
-  = text_field(:current_user, :state_code)
+  = text_field(:user, :state_code)
