--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -1,6 +1,6 @@
 :css
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
-  .quizcontainer { width: 650px; margin-top: 50px;}
+  .quizcontainer { width: 650px; margin-top: 20px;}
 %div.quizcontainer
   %div.quizspace
     %div.professional_mb_register
@@ -17,10 +17,10 @@
           = image_tag ICON_LOGIN_FACEBOOK, alt: "Facebook sign up"
           %span.landingbuttontext Sign up with Facebook »
         .divider OR
-        = form_for(current_user, html: { id: "#" }) do |f|
+        = form_for(current_user, url: finish_section_path(@section, @session_id, s: 3)) do |f|
           = f.text_field :name, value: nil, placeholder: "Name"
           = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
           = f.password_field :password, value: nil, placeholder: "Password"
-      %div{ style: "margin: 12px 0 0 0; padding: 0 3px;"}
-        = link_to "Submit", "#", class: "button button-actionable", style: "float: right;"
-        = link_to "Back", finish_section_path(@section, @session_id, s: 1), class: "button button-standard", style: "float: left;"
+          %div{ style: "margin: 20px 0 0 0;" }
+            = f.submit "Submit", class: "button button-actionable", style: "float: right;"
+            = link_to "Back", finish_section_path(@section, @session_id, s: 1), class: "button button-standard", style: "float: left;"
