--- a/app/views/sections/register9.html.haml
+++ b/app/views/sections/register9.html.haml
@@ -17,11 +17,10 @@
           = image_tag ICON_LOGIN_FACEBOOK, alt: "Facebook sign up"
           %span.landingbuttontext Sign up with Facebook »
         .divider OR
-        = form_for(current_user, html: { id: "#" }) do |f|
+        = form_for(current_user, url: finish_section_path(@section, @session_id, s: 3)) do |f|
           = f.text_field :name, value: nil, placeholder: "Name"
           = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
           = f.password_field :password, value: nil, placeholder: "Password"
-      %div{ style: "margin: 12px 0 0 0; padding: 0 3px;"}
-        = link_to "Register later", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user), s:false), style: "float: left; position: relative; top: 16px;"
-        = link_to "Submit", "#", class: "button button-actionable", style: "float: right;"
-        = link_to "Back", "#", class: "button button-standard", style: "float: right; margin-right: 15px;" 
+          %div{ style: "margin: 20px 0 0 0;" }
+            = f.submit "Submit", class: "button button-actionable", style: "float: right;"
+            = link_to "Register later", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user), s:false), style: "float: left; position: relative; top: 16px;"
