--- a/app/views/sections/register0.html.haml
+++ b/app/views/sections/register0.html.haml
@@ -10,31 +10,18 @@
       %hr{ style: "margin-top:0; "}
       .professional_mb
         .header
-          %h2
-            MetaBright is the game that can land you your next job or internship opportunity.
+          %h2 MetaBright is the game that can land you your next job or internship opportunity.
         .body
-          %h4
-            How does it work?
-          %ul
-            %li Employers can view people's <strong>anonymized</strong> score and answers. 
-            %li If an employer thinks you're a good fit, we'll send you details about the position.
-            %li You get to decide whether or not you want to talk to the employer. You're under no obligation whatsoever.          
-          %h4 
-            But I already have a job...
-          %p 
-            You never know if a better job is just around the corner. MetaBright will keep an eye out for you. Best of all, your status is totally private - your boss will never know!
-          %h4
-            Can I improve my score?
-          %p
-            You bet. There are a bunch of ways to earn points, and you can retake questions you might have missed.
-          %h4
-            Will I get spammed?
-          %p 
-            Absolutely not. Your contact information is only revealed if you choose to connect with the employer.
-          %h4 
-            Can I change my mind?
-          %p
-            Yes. It's as simple as changing a setting on your profile.          
+          %h4 How does it work?
+          %p If you choose to enable the OppBot feature, MetaBright will constantly work in the background to anonymously match you with opportunities based on your skills.
+          %h4 But I already have a job...
+          %p You never know if a better job is just around the corner. MetaBright can keep an eye out for you. Best of all, your status is totally private - your boss will never know!
+          %h4 What if I just want to play the game?
+          %p Then you're in good company! Lots of folks use MetaBright just to prove themselves, sharpen their skills and interact with a community that shares their interests!
+          %h4 Can I improve my score?
+          %p You bet. There are a bunch of ways to earn points, and you can retake questions you might have missed.
+          %h4 Can I change my mind?
+          %p Yes. It's as simple as changing a setting on your profile.          
         .signup{ style: ""}
           = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 9), style: "display: inline-block; margin-right: 40px; margin-bottom: 0; font-size: 13px;", class: "landingbuttontext button button-info"
-          = link_to "Sounds Great!", finish_section_path(@section, @session_id, s: 1), style: "display: inline-block; font-size: 18px; line-height: 36px;", class: "landingbuttontext button button-actionable"
+          = link_to "Try it out!", finish_section_path(@section, @session_id, s: 1), style: "display: inline-block; font-size: 18px; line-height: 36px;", class: "landingbuttontext button button-actionable"
