--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -21,6 +21,6 @@
           = f.text_field :name, value: nil, placeholder: "Name"
           = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
           = f.password_field :password, value: nil, placeholder: "Password"
-          %div{ style: "margin: 20px 0 0 0;" }
-            = f.submit "Submit", class: "button button-actionable", style: "float: right;"
-            = link_to "Back", finish_section_path(@section, @session_id, s: 1), class: "button button-standard", style: "float: left;"
+          %div{ style: "margin: 10px 0 0 0;" }
+            = f.submit "Submit", class: "button button-actionable", style: "float: right; width: auto; "
+            = link_to "Back", finish_section_path(@section, @session_id, s: 1), class: "button button-standard", style: "float: left; width: auto; "
