remove last sentence from internship page

--- a/app/views/pages/internship.html.haml
+++ b/app/views/pages/internship.html.haml
@@ -14,7 +14,7 @@
       %p We’re recent grads ourselves. We’ve had our share of internships and we can promise you, this is not going to be your average internship. You’re going to learn what life is like in a startup. You’ll be hustling and pushing directly with the two co-founders. Sometimes things will be awesome, and sometimes they’ll suck. We need you to bring focus to your work, a willingness to debate ideas, and most of all, you can’t be afraid.
       %p From the very beginning you’ll be pushing code and contributing to product decisions. Since you’ll be moving fast, you have to arrive already understanding our business and our market. 
       %p Everyone does a little bit of everything, and you should be no different. You absolutely need to be a hacker, and you should also have good business acumen, a passion for tech, and a sense of design.
-      %p Unlike a typical startup hacker, you’ll have two major benefits: 1) Limited risk of failure, and 2) you’ll get paid. Our interns get a flat $5,000 stipend. 
+      %p Unlike a typical startup hacker, you’ll have two major benefits: 1) Limited risk of failure, and 2) you’ll get paid.
       %h4 How to apply
       %p Take Challenges for the stuff you know. If you get into the top 50 of the <a href="/challenges/rubyonrails">Ruby on Rails</a>, <a href="/challenges/jquery">jQuery</a>, and <a href="/challenges/css">CSS</a> Challenges, we'll definitely get in touch with you. Even if you can't, cool responses to Creative Response questions tend to get our attention.
       %p When you're happy with the progress you've made, send an email to <a href="mailto:internship@metabright.com">internship@metabright.com</a> with a link to your profile. Please don't send us your resume or a cover letter -- we won't read them.
