--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,3 @@
-<link rel="stylesheet" href="http://www.larentis.eu/switch/bootstrapSwitch.css">
-<script src="http://www.larentis.eu/switch/bootstrapSwitch.js"></script>
-
 %div{ style: "background-color: white; border-radius: 4px; padding:8px; width: 923px;" }
   %img{ style:"display:inline; height:115px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
   %span{ style: "font-size: 50px;position: relative;top:13px;" } Edit Profile
@@ -22,9 +19,8 @@
               %a.btn.secondary{ style: "margin-left:10px;" } Preview   
           %hr{ style: "margin: 10px 0; border-top: 1px solid rgb(213, 213, 213);"}       
           %div
-            %p{ style: "font-size: 15px; word-break: normal; width: 77%; display: inline-block; " } MetaBright can match you with opportunities that fit your skills. Do you want this feature? 
-            %div.switch{ style: "vertical-align: top; margin-left: 12px; "}
-              %input{type:"checkbox"}
+            %p{ style: "font-size: 15px; word-break: normal; width: 77%; display: inline-block; " } MetaBright can match you with opportunities that fit your skills. 
+            %a.button.button-info.button-small{ href:"#", style:"vertical-align: top; margin-left: 12px; "} Edit settings
         %div{ style:"vertical-align: top; display: inline-block; margin: 0 20px 5px 0;" }
           %div.control-group
             %div.controls{style:"margin-left:112px;"}
