--- a/app/assets/stylesheets/z_bootstrap-overrides.css
+++ b/app/assets/stylesheets/z_bootstrap-overrides.css
@@ -61,3 +61,10 @@ a:active, a:focus{ outline: none; }
 h1, h2, h3, h4, h5 { margin-top: 0px; margin-bottom: 0px; }
 
 .button.hide { display: none; }
+
+form .field_with_errors { 
+  display: inline-block; 
+  background-color: inherit; 
+  padding: 0; 
+  margin: 0;
+}
