--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -1,6 +1,26 @@
 :css
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
   .quizcontainer { width: 650px; margin-top: 20px;}
+:javascript
+  $(function(){
+    $(".signup form").submit(function(){
+      var name = $("#user_name").val();
+      var email = $("#user_email").val();
+      var password = $("#user_password").val();
+
+      var error = ""
+      if(password == ""){ error = "Please enter a password." }
+      if(email == ""){ error = "Please enter your email." }
+      if(name == ""){ error = "Please enter a name." }
+
+      if(error != ""){
+        $(this).find(".errors").show().text(error);
+        return false;
+      } else {
+        $(this).find(".errors").hide();
+      }
+    });
+  })
 %div.quizcontainer
   %div.quizspace
     %div.professional_mb_register
@@ -18,6 +38,10 @@
           %span.landingbuttontext Sign up with Facebook »
         .divider OR
         = form_for(current_user, url: finish_section_path(@section, @session_id, s: 3)) do |f|
+          - if @error
+            %p.errors{ style: "color: #b94a48;" }= @error
+          - else
+            %p.errors.hide{ style: "color: #b94a48;" }
           = f.text_field :name, value: nil, placeholder: "Name"
           = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
           = f.password_field :password, value: nil, placeholder: "Password"
